[New Feature] systemTray server groups

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -21,6 +21,8 @@ install:
   - cd ..\..
   - cd 3rd\trojan-qt5-core
   - set GOARCH=386
+  - go env -w GOPROXY=direct
+  - go env -w GOSUMDB=off
   - go build --tags "api client router" -buildmode=c-shared -o trojan-qt5-core.dll main.go
   - process.bat
   - python msvc.py
