--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -37,7 +37,7 @@ build_script:
   - nmake
   - cd release
   - windeployqt trojan-qt5.exe
-  - del *.o *.h *.cpp *.stash *.qrc *.obj Makefile
+  - del *.o *.h *.cpp *.stash *.qrc *.obj *.opt Makefile
   - curl -LO https://github.com/Trojan-Qt5/Trojan-Qt5-Scripts/raw/master/move.py
   - python move.py
   - curl -LO https://github.com/Trojan-Qt5/Trojan-Qt5-DLL/raw/master/libiconv-2.dll
@@ -49,6 +49,7 @@ build_script:
   - curl -LO https://github.com/Trojan-Qt5/Trojan-Qt5-DLL/raw/master/libprotobuf.dll
   - curl -LO https://github.com/Trojan-Qt5/Trojan-Qt5-DLL/raw/master/libgcc_s_dw2-1.dll
   - curl -LO https://github.com/Trojan-Qt5/Trojan-Qt5-DLL/raw/master/zlib1.dll
+  - curl -LO https://github.com/Trojan-Qt5/Trojan-Qt5-DLL/raw/master/Trojan-Qt5-Route.dll
   - del /f /s /q qtcolorpicker.moc trojan-qt5.exp trojan-qt5.lib trojan-qt5_resource.res vc_redist.x86.exe opengl32sw.dll d3dcompiler_47.dll libGLESV2.dll libEGL.dll move.py imageformats\qgif.dll imageformats\qtga.dll imageformats\qtiff.dll imageformats\qwbmp.dll imageformats\qwebp.dll bearer
   - rmdir bearer
   - 7z a Trojan-Qt5-Windows.7z *
