--- a/.gitmodules
+++ b/.gitmodules
@@ -6,16 +6,16 @@
 	url = https://github.com/jbeder/yaml-cpp.git
 [submodule "src/shadowsocksr-uvw"]
 	path = src/shadowsocksr-uvw
-	url = https://github.com/Trojan-Qt5/shadowsocksr-uvw.git
+	url = https://github.com/Qv2ray/shadowsocksr-uvw.git
 [submodule "3rd/qhttpserver"]
 	path = 3rd/qhttpserver
-	url = https://github.com/Trojan-Qt5/qhttpserver.git
+	url = https://github.com/nikhilm/qhttpserver.git
 [submodule "resources/pac"]
 	path = resources/pac
-	url = https://github.com/Trojan-Qt5/Trojan-Qt5-PAC.git
+	url = https://github.com/3v1lW1th1n/Trojan-Qt5-PAC.git
 [submodule "3rd/trojan-qt5-core"]
 	path = 3rd/trojan-qt5-core
-	url = https://github.com/Trojan-Qt5/Trojan-Qt5-Core.git
+	url = https://github.com/ckbkdj/Trojan-Qt5-Core.git
 [submodule "src/qntp"]
 	path = src/qntp
-	url = https://github.com/retgone/qntp.git
+	url = https://github.com/elrinor/qntp.git
